// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainScreenClass 02. should match snapshot in "debug" mode 1`] = `
<div
  className="MainScreen"
>
  <div>
    <p>
      MainScreenClass.react.js
    </p>
    <div
      className="MainScreen__inputButtonWrap"
    >
      <input
        className="MainScreen__input"
        onChange={[Function]}
        value=""
      />
      <button
        className="MainScreen__button"
        onClick={[Function]}
      >
        Ok
      </button>
    </div>
    <p />
    <p />
  </div>
</div>
`;

exports[`MainScreenClass should match snapshot in "debug" mode 1`] = `
<div
  className="MainScreen"
>
  <Header />
  <div>
    <p>
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <div
      className="MainScreen__inputButtonWrap"
    >
      <input
        className="MainScreen__input"
        onChange={[Function]}
        value=""
      />
      <button
        className="MainScreen__button"
        onClick={[Function]}
      >
        Ok
      </button>
    </div>
    <p />
    <p />
  </div>
</div>
`;
